added initial implementation of PATCH /restaurants/orders/{id}/status endpoint
